# CursedWindows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen.conf  makefile
demo/: box.cpp
demos/textbox/: a.out  makefile  test.cpp
demos/textbox/src/: app.hpp  main.cpp
lib/: application.hpp  border.hpp  borders.hpp  errors.hpp  event.hpp  eventqueue.hpp  events.hpp  layout.hpp  widget.hpp
lib/layouts/: border.hpp  grid.hpp  vertical.hpp
lib/widgets/: empty.hpp
src/: application.cpp  eventqueue.cpp  widget.cpp
src/layouts/: border.cpp  grid.cpp
src/widgets/: empty.cpp
